[gd_scene load_steps=2 format=3 uid="uid://dx8t9y5z3w4vr"]

[ext_resource type="Script" path="res://scripts/ui/pause_menu.gd" id="1_pause"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pause")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -75.0
offset_right = 100.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="SaveGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save Game"

[node name="Spacer3" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit to Main Menu"

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/SaveGameButton" to="." method="_on_save_game_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_pressed"]
